--- a/animal-records.html
+++ b/animal-records.html
@@ -60,9 +60,11 @@
       background-color: crimson;
       color: white;
       border: none;
-      padding: 5px 10px;
-      border-radius: 5px;
+      padding: 5px 12px;
+      border-radius: 20px;
+      font-size: 12px;
       cursor: pointer;
+      flex-shrink: 0;
     }
   </style>
 </head>
