--- a/animal-records.html
+++ b/animal-records.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: lightblue;
+      background-color:  lightblue;
       padding: 20px;
     }
     nav {
@@ -40,7 +40,6 @@
       border: none;
       width: 100%;
       border-radius: 5px;
-      cursor: pointer;
     }
     ul {
       margin-top: 30px;
@@ -52,24 +51,12 @@
       margin-bottom: 10px;
       padding: 10px;
       border-radius: 5px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    .delete-btn {
-      background-color: crimson;
-      color: white;
-      border: none;
-      padding: 5px 12px;
-      border-radius: 20px;
-      font-size: 12px;
-      cursor: pointer;
-      flex-shrink: 0;
     }
   </style>
 </head>
 <body>
 
+  <!-- ✅ Navigation Bar -->
   <nav>
     <a href="index.html">Login</a>
     <a href="animal-records.html">Animal Records</a>
@@ -118,28 +105,13 @@
       displayAnimals();
     }
 
-    function deleteAnimal(index) {
-      animals.splice(index, 1);
-      displayAnimals();
-    }
-
     function displayAnimals() {
       const list = document.getElementById("animalList");
       list.innerHTML = "";
 
       animals.forEach((animal, index) => {
         const li = document.createElement("li");
-
-        const info = document.createElement("span");
-        info.textContent = `${index + 1}. ${animal.name} | Gender: ${animal.gender} | Caretaker: ${animal.caretaker} | Vet: ${animal.vetCheckups} | Feeding: ${animal.feedingSchedule}`;
-
-        const delBtn = document.createElement("button");
-        delBtn.textContent = "Delete";
-        delBtn.className = "delete-btn";
-        delBtn.onclick = () => deleteAnimal(index);
-
-        li.appendChild(info);
-        li.appendChild(delBtn);
+        li.textContent = `${index + 1}. ${animal.name} | Gender: ${animal.gender} | Caretaker: ${animal.caretaker} | Vet: ${animal.vetCheckups} | Feeding: ${animal.feedingSchedule}`;
         list.appendChild(li);
       });
     }
