--- a/index.html
+++ b/index.html
@@ -3,14 +3,65 @@
 <head>
   <title>Login</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      background-color: lightblue;
+      color: black;
+      font-family: Arial, sans-serif;
+      padding: 20px;
+    }
+
+    nav {
+      background-color: whitesmoke;
+      padding: 10px;
+      border-radius: 10px;
+      margin-bottom: 20px;
+    }
+
+    nav a {
+      margin-right: 15px;
+      text-decoration: none;
+      color: black;
+    }
+
+    form {
+      background-color: white;
+      padding: 20px;
+      border-radius: 10px;
+      max-width: 300px;
+    }
+
+    input {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 15px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      box-sizing: border-box;
+    }
+
+    button {
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      padding: 8px 20px;
+      border-radius: 50px; /* Oval shape */
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #45a049;
+    }
+  </style>
 </head>
 <body>
-  <body style="background-color: lightblue; color: Black; font-family: Arial, sans-serif;"></body>
+
   <!-- Navigation bar -->
-  <nav style="background-color: whitesmoke; padding: 10px; border-radius: 10px; margin-bottom: 20px;">
-    <a href="index.html" style="margin-right: 15px; text-decoration: none;">Login</a>
-    <a href="animal-records.html" style="margin-right: 15px; text-decoration: none;">Animal Records</a>
-    <a href="booking.html" style="text-decoration: none;">Ticket Booking</a>
+  <nav>
+    <a href="index.html">Login</a>
+    <a href="animal-records.html">Animal Records</a>
+    <a href="booking.html">Ticket Booking</a>
   </nav>
 
   <h2>Login</h2>
@@ -27,9 +78,7 @@
       const username = document.getElementById("username").value;
       const password = document.getElementById("password").value;
 
-      // Simple login check (you can replace this with real logic if needed)
       if (username === "admin" && password === "admin") {
-        // Redirect to animal records page
         window.location.href = "animal-records.html";
       } else {
         alert("Invalid username or password!");
