--- a/booking.html
+++ b/booking.html
@@ -23,7 +23,7 @@
       font-weight: bold;
     }
 
-    .form-container, #ticketSummary {
+    .form-container {
       background: white;
       padding: 20px;
       border-radius: 10px;
@@ -54,8 +54,12 @@
       background-color: #45a049;
     }
 
-    #ticketSummary {
-      display: none;
+    .ticket-box {
+      background-color: white;
+      padding: 15px;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      margin-bottom: 15px;
     }
   </style>
 </head>
@@ -89,17 +93,20 @@
     </form>
   </div>
 
-  <!-- Ticket Summary -->
+  <!-- Ticket Summaries Container -->
   <div id="ticketSummary" class="form-container">
-    <h3>🎟️ Ticket Summary</h3>
-    <p><strong>Visitor Name:</strong> <span id="summaryName"></span></p>
-    <p><strong>Animal Name:</strong> <span id="summaryAnimal"></span></p>
-    <p><strong>Visitor Type:</strong> <span id="summaryType"></span></p>
-    <p><strong>Amount Paid:</strong> ₹<span id="summaryAmount"></span></p>
+    <h3>🎟️ All Ticket Summaries</h3>
+    <div id="summaryList"></div>
   </div>
 
   <!-- Booking Logic -->
   <script>
+    // Load existing tickets from localStorage on page load
+    document.addEventListener('DOMContentLoaded', () => {
+      const tickets = JSON.parse(localStorage.getItem('allTickets')) || [];
+      tickets.forEach(displayTicket);
+    });
+
     function bookTicket(event) {
       event.preventDefault();
 
@@ -108,17 +115,32 @@
       const visitorType = document.getElementById('visitorType').value;
       const amount = document.getElementById('amount').value;
 
-      document.getElementById('summaryName').textContent = visitor;
-      document.getElementById('summaryAnimal').textContent = animal;
-      document.getElementById('summaryType').textContent = visitorType;
-      document.getElementById('summaryAmount').textContent = amount;
-
-      document.getElementById('ticketSummary').style.display = 'block';
-
       const ticket = { visitor, animal, visitorType, amount };
-      localStorage.setItem('lastTicket', JSON.stringify(ticket));
 
+      // Save to localStorage
+      let tickets = JSON.parse(localStorage.getItem('allTickets')) || [];
+      tickets.push(ticket);
+      localStorage.setItem('allTickets', JSON.stringify(tickets));
+
+      // Display on page
+      displayTicket(ticket);
+
+      // Reset the form
       document.querySelector('form').reset();
+    }
+
+    function displayTicket(ticket) {
+      const container = document.getElementById('summaryList');
+      const div = document.createElement('div');
+      div.className = 'ticket-box';
+      div.innerHTML = `
+        <p><strong>Visitor Name:</strong> ${ticket.visitor}</p>
+        <p><strong>Animal Name:</strong> ${ticket.animal}</p>
+        <p><strong>Visitor Type:</strong> ${ticket.visitorType}</p>
+        <p><strong>Amount Paid:</strong> ₹${ticket.amount}</p>
+      `;
+      container.appendChild(div);
+      document.getElementById('ticketSummary').style.display = 'block';
     }
   </script>
 </body>
