--- a/animal-records.html
+++ b/animal-records.html
@@ -90,15 +90,18 @@
 
     .delete-btn {
       position: absolute;
-      top: 10px;
-      right: 10px;
+      top: 8px;
+      right: 8px;
       background-color: red;
       color: white;
       border: none;
-      padding: 5px 10px;
-      border-radius: 5px;
-      font-size: 12px;
+      padding: 4px 8px;
+      border-radius: 4px;
+      font-size: 10px;
       cursor: pointer;
+      width: auto;
+      min-width: 40px;
+      height: auto;
     }
 
     .delete-btn:hover {
