--- a/booking.html
+++ b/booking.html
@@ -64,19 +64,22 @@
     }
 
     .delete-btn {
-      position: absolute;
-      top: 8px;
-      right: 8px;
-      background-color: red;
-      color: white;
-      border: none;
-      padding: 4px 8px;
-      border-radius: 4px;
-      font-size: 10px;
-      cursor: pointer;
-      width: auto;
-      min-width: 40px;
-      height: auto;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  background-color: red;
+  color: white;
+  border: none;
+  padding: 2px 6px;
+  border-radius: 3px;
+  font-size: 9px;
+  cursor: pointer;
+  width: auto;
+  min-width: unset;
+  height: auto;
+  line-height: 1;
+}
+
     }
 
     .delete-btn:hover {
