--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       border-radius: 10px;
       max-width: 300px;
       margin: auto;
+      margin-bottom: 20px;
     }
 
     input {
@@ -74,6 +75,18 @@
     button:hover {
       background-color: #45a049;
     }
+
+    .toggle-link {
+      text-align: center;
+      margin-top: -10px;
+    }
+
+    .toggle-link a {
+      text-decoration: underline;
+      cursor: pointer;
+      color: #0000cc;
+      font-size: 14px;
+    }
   </style>
 </head>
 <body>
@@ -85,29 +98,69 @@
     <a href="booking.html">Ticket Booking</a>
   </nav>
 
-  <!-- Heading and Tagline -->
+  <!-- Heading -->
   <div class="heading">
     <h1>ZOO MANAGEMENT SYSTEM</h1>
   </div>
 
-  <h2>Login</h2>
-  <form onsubmit="login(event)">
+  <!-- Login Form -->
+  <h2 style="text-align:center">Login</h2>
+  <form id="loginForm" onsubmit="login(event)">
     <input id="username" placeholder="Username" required>
     <input id="password" type="password" placeholder="Password" required>
     <button type="submit">Login</button>
+    <div class="toggle-link">
+      <p>New user? <a onclick="showRegister()">Register here</a></p>
+    </div>
+  </form>
+
+  <!-- Registration Form (Initially Hidden) -->
+  <form id="registerForm" onsubmit="register(event)" style="display:none;">
+    <h2 style="text-align:center">Register</h2>
+    <input id="newUsername" placeholder="Choose Username" required>
+    <input id="newPassword" type="password" placeholder="Choose Password" required>
+    <button type="submit">Register</button>
+    <div class="toggle-link">
+      <p>Already have an account? <a onclick="showLogin()">Login here</a></p>
+    </div>
   </form>
 
   <script>
+    function showRegister() {
+      document.getElementById("loginForm").style.display = "none";
+      document.getElementById("registerForm").style.display = "block";
+    }
+
+    function showLogin() {
+      document.getElementById("registerForm").style.display = "none";
+      document.getElementById("loginForm").style.display = "block";
+    }
+
     function login(event) {
       event.preventDefault();
-
       const username = document.getElementById("username").value;
       const password = document.getElementById("password").value;
 
-      if (username === "admin" && password === "admin") {
+      const storedPassword = localStorage.getItem(username);
+
+      if ((username === "admin" && password === "admin") || (storedPassword && storedPassword === password)) {
         window.location.href = "animal-records.html";
       } else {
         alert("Invalid username or password!");
+      }
+    }
+
+    function register(event) {
+      event.preventDefault();
+      const newUsername = document.getElementById("newUsername").value;
+      const newPassword = document.getElementById("newPassword").value;
+
+      if (localStorage.getItem(newUsername)) {
+        alert("Username already exists!");
+      } else {
+        localStorage.setItem(newUsername, newPassword);
+        alert("Registration successful! Please login.");
+        showLogin();
       }
     }
   </script>
