--- a/booking.html
+++ b/booking.html
@@ -117,7 +117,7 @@
 
   <!-- ✅ Previous Button Below Summary -->
   <div style="text-align: center; margin-top: 20px;">
-    <button onclick="window.location.href='animal-records.html'" style="padding: 10px 20px; border-radius: 6px; background-color: #4CAF50; color: white; border: none;">⬅️ Previous</button>
+    <button onclick="window.location.href='animal-records.html'" style="padding: 2px 6px; font-size: 10px; border-radius: 6px; background-color: #4CAF50; color: white; border: none;">⬅️ Previous</button>
   </div>
 
   <!-- Booking Logic -->
