--- a/ticket-booking.html
+++ b/ticket-booking.html
@@ -8,30 +8,38 @@
       font-family: Arial, sans-serif;
       background-color: lavender;
       padding: 20px;
+      margin: 0;
+      position: relative;
+      min-height: 100vh;
     }
+
     nav {
       background-color: #e6e6fa;
       padding: 10px;
       border-radius: 10px;
       margin-bottom: 20px;
     }
+
     nav a {
       margin-right: 15px;
       text-decoration: none;
       font-weight: bold;
       color: #333;
     }
+
     form {
       background: white;
       padding: 20px;
       border-radius: 10px;
       max-width: 400px;
     }
+
     input {
       width: 100%;
       margin-bottom: 10px;
       padding: 8px;
     }
+
     button {
       padding: 10px;
       background-color: #7b68ee;
@@ -39,6 +47,26 @@
       border: none;
       width: 100%;
       border-radius: 5px;
+    }
+
+    .next-button {
+      position: fixed;
+      bottom: 15px;
+      right: 15px;
+    }
+
+    .next-button a {
+      background-color: #555;
+      color: white;
+      text-decoration: none;
+      padding: 6px 12px;
+      font-size: 12px;
+      border-radius: 5px;
+      font-weight: bold;
+    }
+
+    .next-button a:hover {
+      background-color: #333;
     }
   </style>
 </head>
@@ -57,6 +85,11 @@
     <input id="animalName" placeholder="Animal Name" required>
     <button type="submit">Book Ticket</button>
   </form>
+
+  <!-- 👉 Next Button -->
+  <div class="next-button">
+    <a href="vet-checkups.html">Next</a>
+  </div>
 
   <script>
     function bookTicket(event) {
