--- a/booking.html
+++ b/booking.html
@@ -102,6 +102,7 @@
     <a href="index.html">Login</a>
     <a href="animal-records.html">Animal Records</a>
     <a href="booking.html">Ticket Booking</a>
+    <a href="vet checkups.html">Vet Checkups</a>
   </nav>
 
   <h2 style="text-align: center;">Book a Ticket</h2>
@@ -135,6 +136,7 @@
   <!-- ✅ Previous Link styled like nav button -->
   <div class="bottom-right-link">
     <a href="animal-records.html">⬅️ Previous</a>
+    <a href="vet checkups.html"> Next</a>
   </div>
 
   <!-- Booking Logic -->
