--- a/ticket-booking.html
+++ b/ticket-booking.html
@@ -49,6 +49,7 @@
       border-radius: 5px;
     }
 
+    /* Styled like Previous Button */
     .next-button {
       position: fixed;
       bottom: 15px;
@@ -56,17 +57,17 @@
     }
 
     .next-button a {
-      background-color: #555;
+      background-color: green;
       color: white;
       text-decoration: none;
-      padding: 6px 12px;
+      padding: 4px 8px;
       font-size: 12px;
-      border-radius: 5px;
+      border-radius: 4px;
       font-weight: bold;
     }
 
     .next-button a:hover {
-      background-color: #333;
+      background-color: darkgreen;
     }
   </style>
 </head>
@@ -86,7 +87,7 @@
     <button type="submit">Book Ticket</button>
   </form>
 
-  <!-- 👉 Next Button -->
+  <!-- ✅ Next Button matching Previous style -->
   <div class="next-button">
     <a href="vet-checkups.html">Next</a>
   </div>
